# azuraaye4

./: .gitmodules  README.md  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  face_db
app/: build.gradle.kts  google-services.json
app/schemas/com.azura.azuratime.db.AppDatabase/: 5.json  6.json  9.json
app/schemas/com.example.crashcourse.db.AppDatabase/: 4.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  face_recognizer.cpp  jni_bridge.cpp  native_integrity.cpp  native_integrity_generated.cpp  native_integrity_template.cpp  security_stub.cpp  security_stub.h  sha256.h
app/src/main/java/com/azura/azuratime/: AzuraTimeApp.kt  MainActivity.kt
app/src/main/java/com/azura/azuratime/camera/: CameraPreview.kt  CameraXSetup.kt  ImageProxyExtensions.kt
app/src/main/java/com/azura/azuratime/db/: AppDatabase.kt  CheckInDao.kt  CheckInEntity.kt  Converters.kt  DropdownDao.kt  DropdownEntities.kt  FaceCache.kt  FaceDao.kt  FaceEntity.kt  PhoneIdDao.kt  PhoneIdEntity.kt  UserDao.kt  UserEntity.kt
app/src/main/java/com/azura/azuratime/ml/: BitmapUtils.kt  FaceAnalyer2.kt  FaceAnalyzer.kt  FaceRecognitionHelper.kt  FaceRecognizer.kt
app/src/main/java/com/azura/azuratime/model/: ProcessResult.kt
app/src/main/java/com/azura/azuratime/ui/: MainScreen.kt  (+1 more)
app/src/main/java/com/azura/protect/: NativeIntegrity.kt
app/src/main/jniLibs/arm64-v8a/: REMOVE_ME_README.txt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/crashcourse/: ExampleUnitTest.kt
gradle/: libs.versions.toml
tools/: gen_native_hash.sh
(+78 files in other folders)
